--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* src/index.css */
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
